--- a/configs/config_Stance.json
+++ b/configs/config_Stance.json
@@ -6,18 +6,19 @@
     "path_to_data": {
         "recon_train": "../../../irTempAdapt/tasks/stance/data/utrformat/recon_train_dpr10.csv",
         "recon_valid":"../../../irTempAdapt/tasks/stance/data/utrformat/recon_valid.csv",
-        "time_train": "../../../irTempAdapt/tasks/stance/data/utrformat",
-        "time_valid":"../../../irTempAdapt/tasks/stance/data/utrformat",
+        "time_train": "../../../irTempAdapt/tasks/stance/data/utrformat/time_train.csv",
+        "time_valid":"../../../irTempAdapt/tasks/stance/data/utrformat/time_valid.csv",
         "time_test": "../../../irTempAdapt/tasks/stance/data/utrformat/time_test.csv"
     },
     "train" : 1,  
     "resolution": 256,
     "training": {
-        "max_iters": 50000,
+        "max_iters": 6000,
         "resume_iters": 0,
         "restored_model_path": "",
-        "batch_size": 16,
-        "lr": 0.00002,
+        "batch_size": 2,
+        "lr": 0.000005,
+        "mlp_lr": 0.000005,
         "weight_decay": 0.0,
         "beta1" : 0.9,
         "beta2" : 0.999,
@@ -33,7 +34,7 @@
     },
     "test":{
         "test_iters": 50000,
-        "batch_size" : 16,
+        "batch_size" : 2,
         "test_path": "../../../irTempAdapt/tasks/stance/data/utrformat/time_test.csv"
     }
 }
